--- a/meteoric_scale.css
+++ b/meteoric_scale.css
@@ -1,1 +1,10 @@
 /* CSS declarations go here */
+/* Sticky footer styles
+-------------------------------------------------- */
+body {
+  padding-top: 50px;
+}
+.starter-template {
+  padding: 40px 15px;
+  text-align: center;
+}
