--- a/meteoric_scale.css
+++ b/meteoric_scale.css
@@ -8,3 +8,9 @@ body {
   padding: 40px 15px;
   text-align: center;
 }
+#my_weight_chart {
+  height: 240px;
+}
+.start-hidden {
+  display: none;
+}
